# Plannify

./: .gitignore  README.md  config.py  download_model.py  index_data.py  main.py  pyproject.toml  test_calendar.py  test_gemini.py  test_jira.py  test_rag.py  test_telegram_reader.py
agents/: Gemini_agent.py  Gemini_rag.py
connectors/: __init__.py  base.py  google_calendar.py  jira.py  telegram_history.py  telegram_reader.py
ingestion/: cron_sync.py  pipeline.py  sync.py
rag/: context_engine.py  daily_digest.py  hybrid_retriever.py  pipeline.py
storage/: __init__.py  bm25_store.py  index_builder.py  normalize.py  schema.py  vector_store.py
tools/: __init__.py  calendar_tool.py  jira_tool.py  search_tool.py
ui/: bot.py  telegram_bot.py
