[project]
name = "plannify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "google>=3.0.0",
    "google-api-python-client>=2.196.0",
    "google-auth>=2.53.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "google-genai>=2.4.0",
    "google-generativeai>=0.8.6",
    "httpx[socks]>=0.28.1",
    "jira>=3.10.5",
    "pysocks>=1.7.1",
    "python-dotenv>=1.2.2",
    "python-telegram-bot[socks]>=22.7",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.5.0",
    "telethon>=1.43.2",
    "torch>=2.12.0",
    "transformers>=5.8.1",
]
